# structure-flow

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Makefile  pyproject.toml
backend/app/: db.py  main.py  schemas.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py
backend/app/providers/: _constants.py  _utils.py  anthropic.py  base.py  factory.py  stub_anthropic.py  stub_openai.py
backend/tests/: test_chat_endpoint.py  test_constants.py  test_providers.py  test_utils.py  utils.py
frontend/: Makefile  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: chat.test.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  sse.test.ts  sse.ts
frontend/src/components/ChatPanel/: ChatPanel.tsx  MessageForm.tsx  MessageList.tsx
frontend/src/components/DiagramPanel/: MermaidDiagram.tsx
frontend/src/hooks/: useChat.test.ts  useChat.ts  useDiagram.ts
frontend/src/types/: index.ts
